fixes CSS combinator so vertical spacing for __text works

--- a/components/vf-profile/vf-profile.scss
+++ b/components/vf-profile/vf-profile.scss
@@ -16,7 +16,7 @@
   color: set-color(vf-color--grey--darkest);
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 100%; // we might not need this
 }
 
 .vf-profile__image {
@@ -54,7 +54,7 @@
 
   line-height: 1.2;
 
-  .vf-profile__job-title > & {
+  .vf-profile__job-title + & {
     margin-bottom: .25rem;
   }
 }
